syntax = "proto3";

package pb;
option go_package = "./pb";



message Empty {}
message GetUserInfoReq {
  int64 Id = 1;
}


message UserInfo{
  int64 Id = 1;
  string Name = 2;
  string Avatar = 3;
  int64 Role = 4;
  string openId = 5;
}

service adminRpc {
  rpc GetUserInfo (GetUserInfoReq) returns (UserInfo) {}
}